[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Weapons/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Assets/crosshair.png" type="Texture" id=2]
[ext_resource path="res://Assets/reload.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/viewmodel_sprites.png" type="Texture" id=4]
[ext_resource path="res://Assets/gunshot.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/pistol_empty.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "ready"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 39 ), Vector2( 300, -256 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_ready"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3, 0 ]
}

[node name="Weapon" type="Node"]
script = ExtResource( 1 )

[node name="Crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 300, -206.833 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ready = SubResource( 1 )
anims/shoot = SubResource( 2 )

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EmptySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
